--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   "author": "Jacinthe",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.8.0",
     "nodemon": "^2.0.20"
   }
